--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-add-module-exports": "^0.3.1",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^5.1.0"
   }
 }
