--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-add-module-exports": "^0.3.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
-    "eslint": "^5.1.0"
+    "eslint": "^5.1.0",
+    "ws": "^5.2.2"
   }
 }
